# palboard

./: .envrc  .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: docker-image.yml  frontend.yml  gateway.yml
frontend/: Dockerfile  biome.json  bun.lockb  nuxt.config.ts  package.json
frontend/components/: SideNav.vue  editor.vue
frontend/components/info/: PatchNotes.vue
frontend/components/info/shutdown/: Button.vue  Modal.vue
frontend/components/info/update/: Button.vue
frontend/interfaces/: gateway.interface.ts
frontend/layouts/: default.vue
frontend/pages/: editor.vue  index.vue  info.vue  players.vue  saves.vue
frontend/server/middleware/: gateway-proxy.ts
gateway/: Cargo.toml  Dockerfile
gateway/src/: lib.rs  main.rs  pal.rs  rcon.rs  steamcmd.rs  unreal_struct.rs
gateway/src/game_config/: mod.rs  unreal_struct.pest  unreal_struct.rs
gateway/src/pal/: mod.rs  route.rs
gateway/src/steamcmd/: mod.rs  route.rs
