[package]
name = "palboard-gateway"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "ws"] }
bytes = "1.5.0"
console-subscriber = "0.2.0"
csv = "1.3.0"
futures-util = { version = "0.3.30", features = ["sink"] }
pest = "2.7.6"
pest_derive = "2.7.6"
regex = "1.10.3"
rust-ini = "0.20.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
